Add endpoint to complete photo upload flow
- Add endpoint which mobile uses to signal successful upload of photos
  to the backend which kickstarts the whole processing flow.
